Name: Tuba
Version: 0.0.1
Synopsis: Preposition Prediction for Tuba
License: BSD3
Author: Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Maintainer: Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Build-Depends: base
Cabal-Version: >=0.12
build-type: Simple

library
    exposed-modules: Tuba.Format, Tuba.PolyReader
    hs-source-dirs: src
    ghc-options: -Wall -O2 -fglasgow-exts
    ghc-prof-options: -prof -auto-all
    build-depends: base >= 4, bytestring, hexpat, containers, polyparse

executable test
    main-is:          Test.hs
    hs-source-dirs: src
    ghc-options:      -Wall
    ghc-prof-options: -prof -auto-all

executable majb
    main-is: Majbaseline.hs
    hs-source-dirs: src
    ghc-options: -Wall -O2
    ghc-prof-options: -prof -auto-all
